--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sequelize": "^6.13.0"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "swagger-ui-express": "^4.3.0"
   }
 }
